--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native-stack": "^6.9.26",
+    "@types/firebase": "^3.2.1",
     "expo": "~50.0.17",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.11.1",
