--- a/package.json
+++ b/package.json
@@ -10,19 +10,27 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-navigation/material-bottom-tabs": "^6.2.28",
+    "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@types/firebase": "^3.2.1",
     "expo": "~50.0.17",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.11.1",
+    "lottie-ios": "^3.2.3",
+    "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-onboarding-swiper": "^1.2.0",
+    "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0"
+    "react-native-screens": "~3.29.0",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native-onboarding-swiper": "^1.1.9",
     "typescript": "^5.1.3"
   },
   "private": true
