--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@react-navigation/material-bottom-tabs": "^6.2.28",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@shopify/flash-list": "1.6.3",
     "@types/firebase": "^3.2.1",
     "expo": "~50.0.17",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.12.0",
     "lottie-ios": "^3.2.3",
     "lottie-react-native": "^6.7.2",
+    "mqtt": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
@@ -31,8 +33,7 @@
     "react-native-screens": "~3.29.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.6",
-    "toggle-switch-react-native": "^3.3.0",
-    "@shopify/flash-list": "1.6.3"
+    "toggle-switch-react-native": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
