--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@shopify/flash-list": "1.6.3",
     "@types/firebase": "^3.2.1",
     "expo": "~50.0.17",
+    "expo-linking": "^6.3.1",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.12.0",
     "lottie-ios": "^3.2.3",
