--- a/package.json
+++ b/package.json
@@ -9,29 +9,32 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.1.3",
+    "@expo/metro-runtime": "~3.2.1",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/material-bottom-tabs": "^6.2.28",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
-    "@shopify/flash-list": "1.6.3",
+    "@react-navigation/stack": "^6.3.29",
+    "@shopify/flash-list": "1.6.4",
     "@types/firebase": "^3.2.1",
-    "expo": "~50.0.17",
+    "@types/react-native": "^0.73.0",
+    "expo": "^51.0.8",
     "expo-linking": "^6.3.1",
-    "expo-status-bar": "~1.11.1",
+    "expo-status-bar": "~1.12.1",
     "firebase": "^10.12.0",
     "lottie-ios": "^3.2.3",
-    "lottie-react-native": "^6.7.2",
+    "lottie-react-native": "6.7.0",
     "mqtt": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "0.74.1",
+    "react-native-fast-image": "^8.6.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-paper": "^5.12.3",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.6",
     "toggle-switch-react-native": "^3.3.0"
@@ -41,7 +44,7 @@
     "@types/react": "~18.2.45",
     "@types/react-native-onboarding-swiper": "^1.1.9",
     "@types/react-native-vector-icons": "^6.4.18",
-    "typescript": "^5.1.3"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
